--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1,9 +1,12 @@
+/* ============================================ */
+/*  GENERAL   */
+/* ============================================ */
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
 html {
   background-color: #fff;
   color: #555;
@@ -12,8 +15,156 @@ html {
   font-weight: 300;
   text-rendering: optimizeLegibility;
 }
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
 
+/* ============================================ */
+/*  COMPONENTS   */
+/* ============================================ */
 .row {
   max-width: 1140px;
   margin: 0 auto;
+}
+
+
+.logo {
+  float: left;
+  height: 100px;
+  width: auto;
+  margin-top: 20px;
+}
+.logo-black {
+  display: none;
+  visibility: hidden;
+}
+/* = Headings  */
+h1 { 
+  margin-top: 0;
+  margin-bottom: 20px;
+  color: #fff;
+  font-size: 240%;
+  font-weight: 300;
+  text-transform: uppercase;
+  word-spacing: 5px;
+}
+/* = Buttons  */
+.btn {
+  display: inline-block;
+  padding: 10px 30px;
+  font-weight: 300;
+  text-decoration: none;
+  border-radius: 200px;
+  transition: all 0.4s ease-in;
+}
+.btn:hover,
+.btn:active {
+  background-color: #CF6D17;
+
+}
+.btn--full:link,
+.btn--full:visited {
+  background-color: #E67E22;
+  border: 1px solid #E67E22;
+  color: #fff;
+  margin-right: 20px;
+}
+.btn--ghost:link,
+.btn--ghost:visited {
+  border: 1px solid #E67E22;
+  color: #E67E22;
+}
+
+.btn--full:hover,
+.btn--full:active { 
+  border: 1px solid #CF6D17;
+}
+.btn--ghost:hover,
+.btn--ghost:active {
+  border: 1px solid #CF6D17;
+  color: #fff;  
+}
+
+/* ============================================ */
+/* SECTION 00 - HEADER  */
+/* ============================================ */
+/* = Navigation  */
+.main-nav {
+  float: right;
+  margin-top: 50px;
+}
+.main-nav li {
+  display: inline-block;
+  margin-left: 40px;
+}
+.main-nav li a:link,
+.main-nav li a:visited {
+  padding: 8px 0;
+  text-transform: uppercase;
+  font-size: 90%;  
+  color: #fff;
+  border-bottom: 2px solid transparent;
+  transition: all 0.4s ease-in;
+}
+.main-nav li a:hover,
+.main-nav li a:active {
+  border-bottom: 2px solid #E67E22;
+}
+
+
+/* = Hero  */
+
+.hero {
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.3)), url('../img/hero.jpg') center center no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
+.hero--text-box {
+  position: absolute;
+  width: 1140px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+
+
+/* =Buttons  */
+.btn {
+  display: inline-block;
+  padding: 10px 30px;
+  font-weight: 300;
+  text-decoration: none;
+  border-radius: 200px;
+  transition: all 0.4s ease-in;
+}
+.btn:hover,
+.btn:active {
+  background-color: #CF6D17;
+
+}
+.btn--full {
+  background-color: #E67E22;
+  border: 1px solid #E67E22;
+  color: #fff;
+  margin-right: 20px;
+}
+.btn--ghost {
+  border: 1px solid #E67E22;
+  color: #E67E22;
+}
+
+.btn--full:hover,
+.btn--full:active { 
+  border: 1px solid #CF6D17;
+}
+.btn--ghost:hover,
+.btn--ghost:active {
+  border: 1px solid #CF6D17;
+  color: #fff;  
 }
