--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -2,11 +2,8 @@
 /*  GENERAL   */
 /* ============================================ */
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+* {  margin: 0;  padding: 0;  box-sizing: border-box; }
+
 html {
   background-color: #fff;
   color: #555;
@@ -15,20 +12,19 @@ html {
   font-weight: 300;
   text-rendering: optimizeLegibility;
 }
-ul {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-}
+ul {  list-style: none; }
+
+a {  text-decoration: none; }
+
 
 /* ============================================ */
 /*  COMPONENTS   */
 /* ============================================ */
-.row {
-  max-width: 1140px;
-  margin: 0 auto;
-}
+.row {  max-width: 1140px;  margin: 0 auto; }
+
+section {  padding: 80px 0;}
+
+.box {  padding: 1%; }
 
 
 .logo {
@@ -37,20 +33,54 @@ a {
   width: auto;
   margin-top: 20px;
 }
-.logo-black {
-  display: none;
-  visibility: hidden;
-}
+.logo-black {  display: none;  visibility: hidden; }
+
 /* = Headings  */
-h1 { 
+h1, h2, h3 {   font-weight: 300;  text-transform: uppercase; }
+
+h1 {
   margin-top: 0;
   margin-bottom: 20px;
   color: #fff;
   font-size: 240%;
-  font-weight: 300;
-  text-transform: uppercase;
   word-spacing: 5px;
 }
+h2 {
+  font-size: 180%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+h3 {  margin-bottom: 15px;  font-size: 110%; }
+
+h2::after {
+  display: block;
+  content: "";
+  height: 2px;
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 30px;
+  background-color: #E67E22;
+}
+
+
+/* = Texts  */
+.text {  font-size: 85%;  line-height: 140%;  }
+
+.text--long{  line-height: 145%; }
+
+
+/* = Icons  */
+.icon-big {
+  display: block;
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 350%;
+  color: #E67E22;
+}
+
+
+
 /* = Buttons  */
 .btn {
   display: inline-block;
@@ -60,11 +90,8 @@ h1 {
   border-radius: 200px;
   transition: all 0.4s ease-in;
 }
-.btn:hover,
-.btn:active {
-  background-color: #CF6D17;
+.btn:hover, .btn:active {  background-color: #CF6D17; }
 
-}
 .btn--full:link,
 .btn--full:visited {
   background-color: #E67E22;
@@ -78,10 +105,8 @@ h1 {
   color: #E67E22;
 }
 
-.btn--full:hover,
-.btn--full:active { 
-  border: 1px solid #CF6D17;
-}
+.btn--full:hover, .btn--full:active {   border: 1px solid #CF6D17; }
+
 .btn--ghost:hover,
 .btn--ghost:active {
   border: 1px solid #CF6D17;
@@ -92,14 +117,10 @@ h1 {
 /* SECTION 00 - HEADER  */
 /* ============================================ */
 /* = Navigation  */
-.main-nav {
-  float: right;
-  margin-top: 50px;
-}
-.main-nav li {
-  display: inline-block;
-  margin-left: 40px;
-}
+.main-nav {  float: right;  margin-top: 50px; }
+
+.main-nav li {  display: inline-block;  margin-left: 40px; }
+
 .main-nav li a:link,
 .main-nav li a:visited {
   padding: 8px 0;
@@ -109,10 +130,7 @@ h1 {
   border-bottom: 2px solid transparent;
   transition: all 0.4s ease-in;
 }
-.main-nav li a:hover,
-.main-nav li a:active {
-  border-bottom: 2px solid #E67E22;
-}
+.main-nav li a:hover, .main-nav li a:active {  border-bottom: 2px solid #E67E22; }
 
 
 /* = Hero  */
@@ -133,38 +151,15 @@ h1 {
 
 
 
+/* ============================================ */
+/* SECTION 01 - FEATURES  */
+/* ============================================ */
+.section-features__text {
+  width: 70%;
+  margin-left: 15%;
+  text-align: center;
+}
+/* = Boxes  */
+.box h3, .box p {  text-align: center; }
 
-/* =Buttons  */
-.btn {
-  display: inline-block;
-  padding: 10px 30px;
-  font-weight: 300;
-  text-decoration: none;
-  border-radius: 200px;
-  transition: all 0.4s ease-in;
-}
-.btn:hover,
-.btn:active {
-  background-color: #CF6D17;
 
-}
-.btn--full {
-  background-color: #E67E22;
-  border: 1px solid #E67E22;
-  color: #fff;
-  margin-right: 20px;
-}
-.btn--ghost {
-  border: 1px solid #E67E22;
-  color: #E67E22;
-}
-
-.btn--full:hover,
-.btn--full:active { 
-  border: 1px solid #CF6D17;
-}
-.btn--ghost:hover,
-.btn--ghost:active {
-  border: 1px solid #CF6D17;
-  color: #fff;  
-}
