--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -303,6 +303,8 @@ a:active {
   color: #fff;
 }
 
+
+/* = Testimonials boxes  */
 .testimonials blockquote {
   position: relative;
   margin-top: 40px;
@@ -330,3 +332,53 @@ a:active {
   margin-right: 10px;
   vertical-align: middle;
 }
+
+/* ============================================ */
+/* SECTION 06 -   PLANS  */
+/* ============================================ */
+.plans {
+  background-color: #f4f4f4;
+}
+
+/* = Plan boxes  */
+.plan-box {
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  width: 90%;
+  margin-left: 5%;
+  box-shadow: 0 4px 6px #efefef;
+  transform: scale(1);
+  transition: all 0.4s ease-in-out;
+}
+.plan-box:hover {
+  transform: scale(1.1);
+}
+
+.plan-box div {
+  padding: 15px;
+  border-bottom: 1px solid #e8e8e8;
+}
+.plan-box div:first-child {
+  background-color: #f5f5f5;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.plan-box div:last-child {
+  text-align: center;
+  border: 0;
+}
+.plan-box__price {
+  margin-bottom: 10px;
+  color: #E67E22;
+  font-size: 300%;
+  font-weight: 100;
+}
+.plan-box__price span{
+  /*  font-size parent is __price not basic settings  */
+  font-size: 30%;
+  font-weight: 300;
+}
+.plan-box__price-meal {
+  font-size: 80%;
+}
+.plan-box ul li {  padding: 5px 0; }
