--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -4,6 +4,8 @@
 
 * {  margin: 0;  padding: 0;  box-sizing: border-box; }
 
+*:focus {  outline: none; }
+
 html {
   background-color: #fff;
   color: #555;
@@ -125,7 +127,9 @@ a:active {
 
 
 /* = Buttons  */
-.btn {
+.btn:link,
+.btn:visited,
+input[type=submit] {
   display: inline-block;
   padding: 10px 30px 13px;
   font-weight: 300;
@@ -133,10 +137,13 @@ a:active {
   border-radius: 200px;
   transition: all 0.4s ease-in;
 }
-.btn:hover, .btn:active {  background-color: #CF6D17; }
+.btn:hover, .btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {  background-color: #CF6D17; }
 
 .btn--full:link,
-.btn--full:visited {
+.btn--full:visited,
+input[type=submit] {
   background-color: #E67E22;
   border: 1px solid #E67E22;
   color: #fff;
@@ -148,7 +155,9 @@ a:active {
   color: #E67E22;
 }
 
-.btn--full:hover, .btn--full:active {   border: 1px solid #CF6D17; }
+.btn--full:hover, .btn--full:active,
+input[type=submit]:hover,
+input[type=submit]:active {   border: 1px solid #CF6D17; }
 
 .btn--ghost:hover,
 .btn--ghost:active {
@@ -239,18 +248,15 @@ a:active {
 /* ============================================ */
 /* SECTION 03 - HOW IT WORKS  */
 /* ============================================ */
-.steps {
-  background-color: #f4f4f4;
-}
+.steps {  background-color: #f4f4f4; }
+
 .steps__col:first-child {
   text-align: center;
   padding-right: 3%;
   margin-top: 30px;
 }
-.steps__col:last-child {
-  padding-left: 3%;
-  margin-top: 70px;
-}
+.steps__col:last-child {  padding-left: 3%;  margin-top: 70px; }
+
 .steps__col:last-child a:link,
 .steps__col:last-child a:visited {
   border: 0;
@@ -268,9 +274,7 @@ a:active {
 /* = HowItWorks Steps  */
 .hiw-step {  margin-bottom: 50px; }
 
-.hiw-step:last-of-type {  
-  margin-bottom: 80px; 
-}
+.hiw-step:last-of-type {    margin-bottom: 80px; }
 
 .hiw-step div{
   display: inline-block;
@@ -289,9 +293,7 @@ a:active {
 /* ============================================ */
 /* SECTION 04 - CITIES  */
 /* ============================================ */
-.city-feature {
-  margin-bottom: 5px;
-}
+.city-feature {  margin-bottom: 5px; }
 
 /* ============================================ */
 /* SECTION 05 - TESTIMONIALS  */
@@ -336,9 +338,7 @@ a:active {
 /* ============================================ */
 /* SECTION 06 -   PLANS  */
 /* ============================================ */
-.plans {
-  background-color: #f4f4f4;
-}
+.plans {  background-color: #f4f4f4; }
 
 /* = Plan boxes  */
 .plan-box {
@@ -350,23 +350,21 @@ a:active {
   transform: scale(1);
   transition: all 0.4s ease-in-out;
 }
-.plan-box:hover {
-  transform: scale(1.1);
-}
+.plan-box:hover {  transform: scale(1.1); }
 
-.plan-box div {
-  padding: 15px;
-  border-bottom: 1px solid #e8e8e8;
-}
+.plan-box div {  padding: 15px;  border-bottom: 1px solid #e8e8e8; }
+
 .plan-box div:first-child {
   background-color: #f5f5f5;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
-.plan-box div:last-child {
-  text-align: center;
-  border: 0;
+.plan-box div:last-child {  
+  text-align: center;  
+  border: 0; 
+  background-color: #f5f5f5;
 }
+
 .plan-box__price {
   margin-bottom: 10px;
   color: #E67E22;
@@ -378,7 +376,27 @@ a:active {
   font-size: 30%;
   font-weight: 300;
 }
-.plan-box__price-meal {
-  font-size: 80%;
-}
+.plan-box__price-meal {  font-size: 80%; }
+
 .plan-box ul li {  padding: 5px 0; }
+
+/* ============================================ */
+/* SECTION 07 -   FORM  */
+/* ============================================ */
+.form {  width: 60%;  margin: 0 auto; }
+
+input[type=text],
+input[type=email], 
+select, textarea {
+  width: 100%;
+  padding: 7px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+}
+textarea { height: 140px; }
+
+input[type=checkbox] {  margin: 10px 5px 10px 0; }
+
+/* ============================================ */
+/* LAST SECTION  -   FOOTER  */
+/* ============================================ */
