--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -385,6 +385,7 @@ input[type=submit]:active {   border: 1px solid #CF6D17; }
 /* ============================================ */
 .form {  width: 60%;  margin: 0 auto; }
 
+/* = Form elements  */
 input[type=text],
 input[type=email], 
 select, textarea {
@@ -400,3 +401,70 @@ input[type=checkbox] {  margin: 10px 5px 10px 0; }
 /* ============================================ */
 /* LAST SECTION  -   FOOTER  */
 /* ============================================ */
+footer {
+  background-color: #333;
+}
+footer p {
+  color: #888;
+  text-align: center;
+  font-size: 75%;
+  margin-top: 15px;
+  margin-bottom: 7px;
+}
+
+/* = Footer navigation  */
+.footer-nav {
+  float: left;
+  font-size: 80%;
+}
+.social-links {
+  float: right;
+}
+.footer-nav li,
+.social-links li {
+  display: inline-block;
+  margin-right: 20px;
+  margin-top: 10px;
+}
+.footer-nav li:last-child,
+.social-links li:last-child {
+  margin-right: 0;
+}
+
+.footer-nav li a:link, .footer-nav li a:visited,
+.social-links li a:link, .social-links li a:visited {
+  text-decoration: none;
+  border: 0;
+  color: #888;
+  transition: all 0.2s ease-in;
+}
+.footer-nav li a:hover, .footer-nav li a:active {
+  color: #ddd;
+}
+
+.social-links li a:link i, .social-links li a:visited i {
+  font-size: 110%;
+}
+
+.ion-social-facebook ,
+.ion-social-twitter,
+.ion-social-googleplus,
+.ion-social-instagram {
+  transition: color 0.2s ease-in;
+}
+
+.ion-social-facebook:hover {  color: #3b5998; }
+.ion-social-twitter:hover {  color: #00aced; }
+.ion-social-googleplus:hover {  color: #dd4b39; }
+.ion-social-instagram:hover {  color: #517fa4; }
+
+
+
+
+
+
+
+
+
+
+
